--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.10.0",
+    "@reduxjs/toolkit": "^2.0.1",
     "@uiw/react-codemirror": "^4.21.21",
+    "axios": "^1.6.5",
     "clsx": "^2.1.0",
     "codemirror": "^6.0.1",
     "react": "^18.2.0",
     "react-codemirror2": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
